@@ -3,6 +3,7 @@
 #include <string>
 
 #define sTypeTH_LC_TC 0xA0   //La Cross Temp_Hum combined
+#define sTypeTEMP_RPI 0xA0  //Raspberry Pi
 
 enum _eSwitchType
 {
